--- a/simon_game/style.css
+++ b/simon_game/style.css
@@ -26,10 +26,10 @@ body{
     background-color: #f99b45;
 }
 .green{
-    background-color: #63aac0;
+    background-color: #63c07c;
 }
 .purple{
-    background-color: #819ff9;
+    background-color: rgba(236, 84, 236, 0.775);
 }
 
 .flash{
